icons and skills section updated

--- a/index.html
+++ b/index.html
@@ -277,20 +277,20 @@
                     <h3 class="skill-header"><i class="fas fa-code"></i> Programming Languages</h3>
                     <ul class="skill-list">
                         <li class="skill-item">
-                            <i class="fab fa-cuttlefish"></i>
-                            <span class="skill-name">C, C++</span>
+                            <i class="fas fa-code"></i>
+                            <span class="skill-name">C</span>
                         </li>
                         <li class="skill-item">
-                            <i class="fab fa-js-square"></i>
-                            <span class="skill-name">JavaScript</span>
+                            <i class="fas fa-code-branch"></i>
+                            <span class="skill-name">C++</span>
+                        </li>
+                       <li class="skill-item">
+                            <i class="fab fa-java"></i>
+                            <span class="skill-name">Java</span>
                         </li>
                         <li class="skill-item">
-                            <i class="fab fa-html5"></i>
-                            <span class="skill-name">HTML5</span>
-                        </li>
-                        <li class="skill-item">
-                            <i class="fab fa-css3-alt"></i>
-                            <span class="skill-name">CSS3</span>
+                            <i class="fas fa-project-diagram"></i>
+                            <span class="skill-name">OOP</span>
                         </li>
                     </ul>
                 </div>
@@ -310,12 +310,12 @@
                             <span class="skill-name">Terraform</span>
                         </li>
                         <li class="skill-item">
-                            <i class="fas fa-cogs"></i>
-                            <span class="skill-name">Ansible</span>
+                            <i class="fas fa-terminal"></i>
+                            <span class="skill-name">Bash Scripting</span>
                         </li>
                         <li class="skill-item">
-                            <i class="fab fa-jenkins"></i>
-                            <span class="skill-name">Jenkins</span>
+                            <i class="fab fa-docker"></i>
+                            <span class="skill-name">Docker</span>
                         </li>
                         <li class="skill-item">
                             <i class="fab fa-aws"></i>
@@ -350,6 +350,31 @@
                 </div>
             </div>
             
+            <div class="col-md-6 animate-box delay-2">
+                <div class="skill-category">
+                    <h3 class="skill-header"><i class="fas fa-laptop-code"></i> Frontend Skills</h3>
+                    <ul class="skill-list">
+                        <li class="skill-item">
+                            <i class="fab fa-html5"></i>
+                            <span class="skill-name">HTML5</span>
+                        </li>
+                        <li class="skill-item">
+                            <i class="fab fa-css3-alt"></i>
+                            <span class="skill-name">CSS3</span>
+                        </li>
+                        <li class="skill-item">
+                            <i class="fab fa-js-square"></i>
+                            <span class="skill-name">JavaScript</span>
+                        </li>
+                        <li class="skill-item">
+                            <i class="fab fa-react"></i>
+                            <span class="skill-name">React</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+
             <!-- Networking -->
             <div class="col-md-6 animate-box delay-4">
                 <div class="skill-category">
@@ -368,8 +393,16 @@
                             <span class="skill-name">DHCP, IP, Subnetting</span>
                         </li>
                         <li class="skill-item">
-                            <i class="fab fa-react"></i>
-                            <span class="skill-name">ReactJS</span>
+                            <i class="fas fa-network-wired"></i>
+                            <span class="skill-name">NAT</span>
+                        </li>
+                        <li class="skill-item">
+                            <i class="fas fa-network-wired"></i>
+                            <span class="skill-name">PAT</span>
+                        </li>
+                        <li class="skill-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <span class="skill-name">VPN</span>
                         </li>
                     </ul>
                 </div>
