--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <div class="overlay"></div>
                             <div
                                 class="img d-flex align-self-stretch align-items-center"
-                                style="background-image:url(images/bg_1.png);"
+                                style="background-image:url(images/abc.png);"
                             ></div>
                         </div>
                     </div>
